//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

import "google/protobuf/any.proto";

import "dxos/keys.proto";

package dxos.halo.credentials.auth;

/**
 * The payload for a SignedMessage sent during handshake for replication authentication.
 */
message Auth {
  /// The publicKey of the target Party for these credentials.
  dxos.keys.PublicKey party_key = 1;

  /// The publicKey of the authenticating Device.
  dxos.keys.PublicKey device_key = 2;

  /// The publicKey of the authenticating Identity.
  dxos.keys.PublicKey identity_key = 3;

  /// The publicKey of the authenticating Identity.
  optional dxos.keys.PublicKey feed_key = 4;

  /// FeedAdmit message to the should be written to a control feed in case the `feed_key` is not admitted to the party.
  optional google.protobuf.Any feed_admit = 5;
}
